--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Nanodegree Apps</string>
     <string name="action_settings">Settings</string>
-    <string name="nanodegree_apps">Nanodegree Apps</string>
+    <string name="nanodegree_apps">NANO-DEGREE APPS</string>
     <string name="popular_movies">POPULAR MOVIES</string>
     <string name="stock_hawk">STOCK_ HAWK</string>
     <string name="build_it_bigger">BUILD IT BIGGER</string>
