--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
     <string name="go_ubiquitous">GO UBIQUITOUS</string>
     <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
-    <string name="toast_display_message">This button will launch my:</string>
+    <string name="toast_display_message">This button will launch: </string>
 </resources>
